--- a/style.css
+++ b/style.css
@@ -25,3 +25,63 @@ body {
   height: 300px;
   margin: 0 auto;
 }
+
+.cube {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  font-weight: 600;
+  font-size: 18px;
+  transform-style: preserve-3d;
+  animation: rotateCube 8s infinite linear;
+}
+
+.face {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  line-height: 300px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.front {
+  background: #01befe;
+  transform: translateZ(150px);
+}
+
+.back {
+  background: #ffdd00;
+  transform: rotateY(180deg) translateZ(150px);
+}
+
+.right {
+  background: #ff7d00;
+  transform: rotateY(90deg) translateZ(150px);
+}
+
+.left {
+  background: #ff006d;
+  transform: rotateY(-90deg) translateZ(150px);
+}
+
+.top {
+  background: #adff02;
+  transform: rotateX(90deg) translateZ(150px);
+}
+
+.bottom {
+  background: #8f00ff;
+  transform: rotateX(-90deg) translateZ(150px);
+}
+
+@keyframes rotateCube {
+  0% {
+    transform: rotateY(0deg) rotateX(0deg);
+  }
+
+  100% {
+    transform: rotateY(360deg) rotateX(360deg);
+  }
+}
